v0.77.1.13:
	- Added thrown potions to the PVP protection tests (not fully implemented in Bukkit yet).
	- '/townyadmin town/nation' command is now useable at the console.
v0.77.1.14:
	- If using GM this version requires latest Dev GroupManager 1.7.5+ for all features to work fully.
	- Implemented new GM event system.
	- '/g' global chat mode now applies chat formatting again.
	- Implemented PEX events.
V0.77.1.15:
	- Fixed Null return from getPlayerPermissionStringNode when using PEX.
	- '/town set perm reset' and '/res set perm reset' now correctly update the plot data files.
v0.77.1.16:
	- '/plot perm' on a town owned plot now correctly shows R for resident instead of F for friend.
	- Fixed World settings for Explosions.
	- Permissions are now correctly read from the plot rather than the town. Town level permisisons are defaults and changes propogate with '/town set perm reset'.
	- You can no longer add town assistants who are not members of your town.
	- Added a new command '/resident tax'.
	  Shows the total taxes a player will have to pay at the next new day.
v0.77.1.17:
	- Fix for bPermissions removing it's .has() function.
v0.77.1.18:
	- Allow killing of mobs in the wilderness for worlds with PVP disabled.
v0.77.1.19:
	- Changed wild permission nodes to accept negation after '*'. You can now use wild perms as a whitelist and blacklist.
	  If using GroupManager or any system which accepts wildcards...
	    to use as a whitelist, use the existing...
	      towny.wild.block.{id}.*
	    to use as a blacklist...
	      towny.wild.*
	      -towny.wild.block.{id}.*
v0.77.1.20:
	- Fixed towny.wild.block.{id}... to allow overriding of Admin permissions.
	- Fixed a typo on towny.town.toggle.explosions
	- Mayors and assistants can once again change the plot type on resident owned plots.
v0.77.1.21:
	- Fixed world loading of the force town mobs setting.
	- Fixed wild perms for non admins.
v0.77.1.22:
	- Fix for bPerms not supporting wildcards.