@@ -927,3 +927,4 @@ v0.77.1.21:
 	- Fixed wild perms for non admins.
 v0.77.1.22:
 	- Fix for bPerms not supporting wildcards.
+	- Wild permissions no longer fall back to world settings if set to use a permissions provider.
